# lse

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  package.json
.gihub/workflows/: cmake-build.yml
.github/actions/gcc-toolchain/: action.yml
.github/actions/install-upx/: action.yml
.github/workflows/: cmake-build.yml  lse-build-cmake.yml  lse-npm.yml  lse-runtime.yml  npm-packages.yml
bindings/js/internal/common/: package.json
bindings/js/internal/common/src/: paths.mjs  plugins.mjs  version.mjs
bindings/js/internal/react/: package.json  rollup.config.mjs
bindings/js/internal/react-reconciler/: .babelrc  package.json  rollup.config.mjs
bindings/js/internal/react/runtime/: package.json  react-jsx-runtime.mjs  react.mjs
bindings/js/lse/core/: binding.gyp  package.json  rollup.config.mjs
bindings/js/lse/core/addon/: CMakeLists.txt  build.gypi
bindings/js/lse/core/addon/src/: init.c  lse_core.c  lse_core.h  lse_core_class.c  lse_core_env.c  lse_core_exports.c  lse_core_style.c  lse_core_thread_pool.c  lse_core_window.c  napix.c  napix.h
bindings/js/lse/core/publishing/: package-overlay.json5
bindings/js/lse/core/runtime/: lse-core.mjs  package.json
bindings/js/lse/core/src/: AnalogKey.mjs  BoxNode.mjs  Direction.mjs  Display.mjs  DisplayMode.mjs  Env.mjs  Event.mjs  EventEmitter.mjs  EventSymbols.mjs  FixedListWaypoint.mjs  Font.mjs  Gamepad.mjs  Hat.mjs  (+27 more)
bindings/js/lse/loader/: package.json  rollup.config.mjs
bindings/js/lse/react/: package.json  rollup.config.mjs
bindings/js/lse/style/: package.json  rollup.config.mjs
config/cmake/: functions.cmake
config/runtime/entry/: lse.cmd.template  lse.template
config/runtime/meta/: uninstall-nclassic.sh
config/runtime/recipes/: linux-arm64.json5  linux-armv6l.json5  linux-armv7l.json5  linux-x64.json5  macos-arm64.json5  macos-x64.json5  macos.json5  nclassic-armv7l.json5  pi-armv6l.json5  pi-armv7l.json5  windows-x64.json5
lib/: CMakeLists.txt  build.gypi
lib/include/: lse.h
lib/src/: lse_array.c  lse_array.h  lse_box_node.c  lse_cfg.h  lse_color.c  lse_color.h  lse_env.c  lse_env.h  lse_event.c  lse_event.h  lse_event_template.h  lse_font.c  lse_font.h  lse_font_store.c  lse_font_store.h  lse_gamepad.c  lse_gamepad.h  lse_graphics.c  lse_graphics.h  lse_graphics_container.c  lse_graphics_container.h  lse_image.c  lse_image.h  lse_image_node.c  lse_image_store.c  lse_image_store.h  lse_keyboard.c  lse_keyboard.h  lse_log.c  lse_matrix.c  lse_matrix.h  lse_memory.c  lse_memory.h  lse_mock_gamepad.c  lse_mock_graphics.c  lse_mock_graphics_container.c  lse_mock_keyboard.c  lse_mock_video.c  lse_node.c  lse_node.h  (+32 more)
test/: CMakeLists.txt
test/assets/: not_an_image.txt
test/src/: test_lse_array.c  test_lse_env.c  test_lse_event.c  test_lse_font.c  test_lse_font_store.c  test_lse_image.c  test_lse_image_store.c  test_lse_node.c  test_lse_object.c  test_lse_string.c  test_lse_style.c  test_lse_style_meta.c  test_lse_text.c  test_lse_window.c
test/src/framework/: lse_test.c  lse_test.h
test/src/runner/: lse_test_runner.c  lse_test_runner_suite.c
tools/: create-npm-packages.sh  test-npm-packages-install.sh
tools/package/: .babelrc  package.json
tools/package/db/: bindings.json5  style.json5
tools/package/lib/: Template.mjs  create-runtime-lib.mjs  paths.mjs
tools/package/template/: Style.mjs.template  lse_core_exports.c.template  lse_style_meta.c.template  lse_test_runner_suite.c.template  style-enums.template
tools/scripts/: create-npm-packages.sh  test-npm-packages-install.sh
(+28 files in other folders)
